fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ p {
 
 #header {
   background-color: black;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
